--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -37,7 +37,7 @@ img {
   padding: 15px 25px;
   border: none;
   border-radius: 5px;
-  background-color: darkgreen;
+  background-color: rgb(11, 129, 226);
   color: red;
   margin-bottom: 10px;
 }
