--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: tomato;
+  background-color: rgb(243, 255, 71);
 }
 
 .example {
@@ -109,7 +109,7 @@ img {
   padding: 15px 25px;
   border: none;
   border-radius: 5px;
-  background-color: darkgreen;
+  background-color: rgb(11, 129, 226);
   color: red;
   margin-bottom: 10px;
 }/*# sourceMappingURL=index.css.map */
